<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tv1"
            android:id="@+id/tv1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.145"
            app:layout_constraintHorizontal_bias="0.498"
    />

    <RadioGroup
            android:layout_width="269dp"
            android:layout_height="53dp"
            android:orientation="horizontal" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/tv1" android:layout_marginEnd="71dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbLS" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbTOD" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/sensorLevels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv2" android:layout_marginTop="65dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="156dp"/>
    <EditText
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etCLux"
            app:layout_constraintTop_toBottomOf="@+id/tv2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="163dp"/>
    <TextView
            android:text="@string/turnon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv3" android:layout_marginTop="73dp"
            app:layout_constraintTop_toBottomOf="@+id/tv2" app:layout_constraintEnd_toStartOf="@+id/tv4"
            android:layout_marginEnd="86dp"/>
    <EditText
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etLon"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv3" app:layout_constraintEnd_toStartOf="@+id/etLoff"
            android:layout_marginEnd="105dp"/>
    <TextView
            android:text="@string/turnoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv4" android:layout_marginTop="73dp"
            app:layout_constraintTop_toBottomOf="@+id/tv2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="55dp"/>
    <EditText
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etLoff"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="63dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/fab" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="33dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>