<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/sensorLevels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="264dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="156dp"/>
    <TextView
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etLux"
            app:layout_constraintTop_toBottomOf="@+id/tv2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp"/>
    <TextView
            android:text="@string/turnon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv3" android:layout_marginTop="73dp"
            app:layout_constraintTop_toBottomOf="@+id/tv2" app:layout_constraintEnd_toStartOf="@+id/tv4"
            android:layout_marginEnd="86dp"/>
    <EditText
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etLon"
            app:layout_constraintEnd_toStartOf="@+id/etLoff"
            android:layout_marginEnd="105dp" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv3"/>
    <TextView
            android:text="@string/turnoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv4" android:layout_marginEnd="55dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="73dp" app:layout_constraintTop_toBottomOf="@+id/tv2"/>
    <EditText
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etLoff"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="63dp"/>
    <Button
            android:text="Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate" android:layout_marginEnd="160dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="94dp" app:layout_constraintTop_toBottomOf="@+id/tv4"/>

</androidx.constraintlayout.widget.ConstraintLayout>